feat: 域名管理
